# HCC

./: .gitignore  CMakeLists.txt  LICENSE  build_and_test.sh  rpi_build_and_test.sh  rpi_run.sh  rpi_sync.sh  run.sh
docs/: ui.md
source/: CMakeLists.txt
source/graphics/: CMakeLists.txt  graphics.cpp
source/input/: CMakeLists.txt  input.cpp
source/system/: CMakeLists.txt  graphics.cpp  input.cpp  system.cpp  system_macos.cpp  system_stub.cpp
source/ui/: hcc.app.cleo  hcc.edit.cleo  hcc.graphics.cleo  hcc.input.cleo  hcc.system.cleo  hcc.ui.cleo
test/: CMakeLists.txt  circle_coverage_test.cpp
